--- a/html&css.html
+++ b/html&css.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
-<HTML lang="en">
-<title>Welcome to my HTML and CSS project</title>
-<p>Hello World</p>
+<html lang="en">
+    <head>
+        <title>Welcome to my HTML and CSS project.</title>
+        <meta charset="utf-8">
+	</head>
+	<body>
+        <p>Hello World</p>
+    </body>
 </html>
