--- a/Assignment.html
+++ b/Assignment.html
@@ -12,6 +12,7 @@
 		</main>
 		    <p>do you love dogs?</p>
 		    <p>I do they are the best!</p>
+		    <h6>look how cute this puppy is!</h6>
 		      <div>
 		         <img src="C:\Users\Rory Bester\Pictures\Saved Pictures\puppy.jpg">
 		      </div>
