changed link types

--- a/dog.html
+++ b/dog.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
 	</head>
 	<body>
-        <img src="C:\Users\Rory Bester\Pictures\Saved Pictures\jemmers.jpg">
+        <img src="C:\Users\Rory Bester\Documents\GitHub\HTML_and_CSS_Projects\jemmers.jpg">
 		<nav>
            <a href="file:///C:/Users/Rory%20Bester/Documents/GitHub/HTML_and_CSS_Projects/Assignment.html">Home.</a> |		
            <a href="file:///C:/Users/Rory%20Bester/Documents/GitHub/HTML_and_CSS_Projects/dog.html">Picture</a> |
