--- a/Assignment.html
+++ b/Assignment.html
@@ -14,7 +14,7 @@
 		    <p>I do they are the best!</p>
 		    <h6>look how cute this puppy is!</h6>
 		      <div>
-		         <img src="C:\Users\Rory Bester\Documents\GitHub\HTML_and_CSS_Projects\puppy.jpg">
+		         <img src="./puppy.jpg">
 		      </div>
 		    <p>here's a dog thats gonna get you.</p>
 		    <a href="https://images.unsplash.com/photo-1613656741959-70b2eaeb6db8?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=312&q=80">I'm gonna get you.</a>
@@ -22,11 +22,11 @@
             <blockquote>"the dog is a gentleman,
                         I hope to go to his heaven
                               not man's"</blockquote>					  
-				  <nav>
-                     <a href="file:///C:/Users/Rory%20Bester/Documents/GitHub/HTML_and_CSS_Projects/Assignment.html">Home.</a> |		
-                     <a href="file:///C:/Users/Rory%20Bester/Documents/GitHub/HTML_and_CSS_Projects/dog.html">Picture</a> |
-		             <a href="file:///C:/Users/Rory%20Bester/Documents/GitHub/HTML_and_CSS_Projects/dog_video.html">Video</a>
-		          </nav>
+			<nav>
+               <a href="./Assignment.html">Home.</a> |		
+               <a href="./dog.html">Picture</a> |
+		       <a href="./dog_video.html">Video</a>
+		    </nav>
 	</body>
 	<footer>Rory.bester@yahoo.com</footer>
 </html>
