--- a/dog.html
+++ b/dog.html
@@ -5,11 +5,11 @@
         <meta charset="utf-8">
 	</head>
 	<body>
-        <img src="C:\Users\Rory Bester\Documents\GitHub\HTML_and_CSS_Projects\jemmers.jpg">
+        <img src="./jemmers.jpg">
 		<nav>
-           <a href="file:///C:/Users/Rory%20Bester/Documents/GitHub/HTML_and_CSS_Projects/Assignment.html">Home.</a> |		
-           <a href="file:///C:/Users/Rory%20Bester/Documents/GitHub/HTML_and_CSS_Projects/dog.html">Picture</a> |
-		   <a href="file:///C:/Users/Rory%20Bester/Documents/GitHub/HTML_and_CSS_Projects/dog_video.html">Video</a>
+           <a href="./Assignment.html">Home.</a> |		
+           <a href="./dog.html">Picture</a> |
+		   <a href="./dog_video.html">Video</a>
 		</nav>
     </body>
 	<footer>Rory.bester@yahoo.com</footer>
