--- a/Basic_HTML_and_CSS/HTML_Lists.html
+++ b/Basic_HTML_and_CSS/HTML_Lists.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 	   <!--this section is a link to a css style sheet My_List_Style.css -->
-	   <link rel = "stylesheet" type = "text/css" href = "My_List_Style.css">
+	   <link rel = "stylesheet" type = "text/css" href = "basic_css.css">
 	   <!--this section is an un ordered list of reasons to get a dog-->
 	   <h3>Reasons to get a dog and what you'll need to provide for them.</h3>
 	   <p>heres an un ordered list of reasons to get a dog</p>
