change <p> to <h4> and updates the css

--- a/Basic_HTML_and_CSS/HTML_Lists.html
+++ b/Basic_HTML_and_CSS/HTML_Lists.html
@@ -9,7 +9,7 @@
 	   <link rel = "stylesheet" type = "text/css" href = "CSS_Lists.css">
 	   <!--this section is an un ordered list of reasons to get a dog-->
 	   <h3>Reasons to get a dog and what you'll need to provide for them.</h3>
-	   <p>heres an un ordered list of reasons to get a dog</p>
+	   <h4>heres an un ordered list of reasons to get a dog</h4>
 	   
 	   <div>
 	     <ul>
