--- a/Basic_HTML_and_CSS/HTML_Lists.html
+++ b/Basic_HTML_and_CSS/HTML_Lists.html
@@ -8,21 +8,20 @@
 	   <!--this section is a link to a css style sheet My_List_Style.css -->
 	   <link rel = "stylesheet" type = "text/css" href = "CSS_Lists.css">
 	   <!--this section is an un ordered list of reasons to get a dog-->
-	   <h3>Reasons to get a dog and what you'll need to provide for them.</h3>
-	   <h4>heres an un ordered list of reasons to get a dog</h4>
-	   
-	   <div>
+	   <h3><em>Reasons to get a dog and what you'll need to provide for them.</em></h3>
+	   <h4><em>heres an un ordered list of reasons to get a dog</em></h4>	   
+	   <section>
 	     <ul>
 		   <li>they make the best companions.</li>
 		   <li>they clean up spilt food.</li>
 		   <li>You can teach them to get you a beer!</li>
 		   <li>they always know how to make you feel better after a long day.<li>
 		 </ul>
-	   </div>
+	   </section>
 	   <!--this section is an ordered list of items you would need to care for a dog -->
-	     <h3>Heres a list of the items you would need to care for a dog in order.</h3>
-		 
-	   <div>
+	   <  
+		 <h3><em>Heres a list of the items you would need to care for a dog in order.</em></h3>
+	   <section>
 	     <ol>
 		   <li>water.</li>
 		   <li>food</li>
@@ -30,10 +29,11 @@
 		   <li>toys</li>
 		   <li>dog bed.</li>
 		 </ol>
-		 <p></p>
-	   </div>
+	   </section>
+	   <p></p>
 	   <!-- linked image -->
 	     <img src="dog_camping.jpg" alt="mans best friend camping">
+		 <a href="https://manofmany.com/outdoors/camping/dog-friendly-camping-spots-nsw" target="new">dog friendly camping sites</a>
 	</body>
 </html>
 		 
