--- a/Basic_HTML_and_CSS/Project/index.html
+++ b/Basic_HTML_and_CSS/Project/index.html
@@ -154,7 +154,7 @@
 				    <h1>Reservations</h1>
 					<div>
 					    <h2><span>your guide to the German Shepperd breed is just a click away</span>
-						    <br />Reserve your play with a Shepperd time today!
+						    <br>Reserve your play with a Shepperd time today!
 						</h2>
 						<p>
 						   Please provide us with your basic contact information.
