--- a/BasicHTML.html
+++ b/BasicHTML.html
@@ -8,9 +8,8 @@
     <body>	
 	     <header>
 		        <h4>Basic HTML Template</h4>
+				<p>introduction to basic HTML syntax</p>
+				<p>added another paragraph</p>
 		 </header>
-		 <p>
-		 Introduction to basic HTML syntax.
-		 </p>
 	</body>
-</html>
+</html>P
