--- a/Basic_HTML_and_CSS/Project/index.html
+++ b/Basic_HTML_and_CSS/Project/index.html
@@ -185,7 +185,7 @@
 
 		<!-- FOOTER -->
 		<div id="footer">
-			www.thegermanshepperdranch.com &nbsp|&nbsp; &copy; 2021
+			www.thegermanshepperdranch.com &nbsp;|&nbsp; &copy; 2021
 		</div>
 		<!-- END FOOTER -->
 
