--- a/Basic_HTML_and_CSS/One-Page Website/one_page_website.html
+++ b/Basic_HTML_and_CSS/One-Page Website/one_page_website.html
@@ -106,9 +106,11 @@
          <!-- END RSVP -->
 
          <!-- FOOTER -->
-         <div id="footer">
+		<footer> 
+            <div id="footer">
              www.courtneyandrorysbigday.com &nbsp;|&nbsp; &copy; 2021
-         </div>
+            </div>
+		</footer>
          <!-- END FOOTER-->
 
     </body>
