spelling errors corrected

--- a/Basic_HTML_and_CSS/my student portfolio/portfolio_site.html
+++ b/Basic_HTML_and_CSS/my student portfolio/portfolio_site.html
@@ -26,7 +26,7 @@
         <!--Background Video-->
         <div id="Home">
             <video autoplay muted loop id="Typing_Video">
-                <source src="./images/video/" type="video/mp4">
+                <source src="./images/video/typing.mp4" type="video/mp4">
                 <!--Display message if video fails to run-->
                 Your browser does not support HTML5 video.
             </video>
@@ -43,9 +43,9 @@
                     </q>
                     <br> -Joseph Weizenbaum
                     <br>
-                    <br> My name is Rory A Bester. Welcome to my portfolio website. On it i will tell you about my background and exsperience.
+                    <br> My name is Rory A. Bester. Welcome to my portfolio website. On it I will tell you about my background and experience.
                     <br>
-                    <br> Thank you for stopping by hope you enjoy!
+                    <br> Thank you for stopping by and hope you enjoy!
                 </p>
             </strong>
         </div>
@@ -54,7 +54,7 @@
         <div class="row" id="About">
             <!--Left column-->
             <div class="Column_2">
-                <img src="./images/" alt="">
+                <img src="./images/Development.jpg" alt="Development">
             </div>
             <!--Right Column-->
             <div class="Column_1">
@@ -62,7 +62,7 @@
                 <p>
                     I am a software developer who loves to code! As a father of one, I enjoy time with my family and traveling.
                     <br>
-                    <br>I am a graduate of <a href="https://www.learncodinganywhere.com" target="_blank">The Tech Academy</a>’s Software Developer Boot Camp, and trained and experienced in the following web and programming languages: HTML, CSS, JavaScript, SQL, C# and more.
+                    <br>I am a graduate of <a href="https://www.learncodinganywhere.com" target="_blank">The Tech Academy</a>’s Software Developer Boot Camp and am trained and experienced in the following web and programming languages: HTML, CSS, JavaScript, SQL, C# and more.
                     <br>
                     <br>I am a full-stack developer and would love to work with you on your project. <a href="#Contact">Contact</a> me below!
                 </p>
@@ -72,6 +72,48 @@
         <!--GitHub Section-->
         <div class="row" id="GitHub">
             <!--Left Column-->
-            <
+            <div class="Column_1" id="GitHub">
+                <h1>GitHub</h1>
+                <p class="align">
+                    You can view my coding projects on my GitHub profile here:
+                    <br>
+                    <p class="center"><a href="https://github.com/RoryBester/HTML_and_CSS_Projects" target="blank">Rory Besters GitHub</a></p>
+                </p>
+            </div>
+            <!--Right Column-->
+            <div class="Column_2">
+                <a href="https://github.com/RoryBester/HTML_and_CSS_Projects" target="_blank"><img src="./images/GitHub.png" alt="GitHub Logo"></a>
+            </div>
         </div>
+
+        <!--Contact section-->
+        <div class="row" id="Contact">
+            <!--contact image, left column-->
+            <div class="Column_2 Column_tall">
+                <img src="./images/Contact.jpg" alt="Contact)Image">
+            </div>
+            <!--Contact form, right Column-->
+            <div class="Column_1 Column_tall">
+                <h1>Contact</h1>
+                <!--This is  where i specify where to send the data-->
+                <form action="httpsformspree.iofmnqllrvy" method="POST">
+                    <label>Name:</label>
+                        <input type="text" placeholder="Please enter your name here">
+                    <label>Email:</label>
+                        <input type="text" id="Email" name="Email" placeholder="Please enter your email here">
+                    <label>Message:</label>
+                        <input type="text" id="Message" name="Message" placeholder="Please write your message here">
+                        <input type="submit" value="SUBMIT">
+                </form>
+            </div>
+        </div>
+
+        <!--Footer section-->
+        <footer>
+            <p>
+                <p class="center">&copy Prosper Consulting Inc., <a href="https://www.learncodinganywhere.com/" target="_blank"></a></p>
+                <br>
+            </p>
+        </footer>
     </body>
+</html>
